[gd_scene load_steps=6 format=3 uid="uid://bhphdqmsev4lg"]

[ext_resource type="Script" uid="uid://dt8p354dy3631" path="res://pause/pause_menu.gd" id="1_y8k3c"]
[ext_resource type="Shader" uid="uid://cbf550vjy4f6m" path="res://pause/pause_menu.gdshader" id="2_jbs5q"]
[ext_resource type="Texture2D" uid="uid://dpihgyg1snaf4" path="res://PixelArt/playButton.png" id="3_lm50y"]
[ext_resource type="Texture2D" uid="uid://bxsdxpw4ol1or" path="res://PixelArt/settingsButton.png" id="4_dacs1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ni4uc"]
shader = ExtResource("2_jbs5q")
shader_parameter/amount = 2.5

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y8k3c")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ni4uc")
layout_mode = 2
offset_left = -117.0
offset_top = -71.0
offset_right = 204.0
offset_bottom = 141.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"
icon = ExtResource("3_lm50y")

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
"
icon = ExtResource("4_dacs1")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
